# sks5

./: .commitlintrc.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .grype.yaml  .hadolint.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.alpine  Containerfile.cross  Containerfile.package  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  config.example.toml  deny.toml  docker-compose.yml
.cargo/: audit.toml
.forgejo/workflows/: ci.yml
.github/: act-event.json  dependabot.yml
.github/workflows/: ci.yml  mutants.yml
assets/: dashboard.html
benches/: acl_bench.rs  config_bench.rs  password_bench.rs  socks5_bench.rs
contrib/: README.md  demo.tape  sks5.service  wizard-interactive.tape  wizard.tape
docs/: ARCHITECTURE.md  BUGS.md  CI-CD.md  CONFIG-REFERENCE.md  DEPLOYMENT.md  INTROSPECTION-REPORT.md  SECURITY-AUDIT.md  TESTING.md  USER-GUIDE.md
fuzz/: Cargo.toml
fuzz/corpus/config_parser/: minimal
fuzz/corpus/fuzz_udp_header/: domain_seed  ipv4_seed
fuzz/fuzz_targets/: fuzz_acl_rule.rs  fuzz_config_parser.rs  fuzz_shell_tokenizer.rs  fuzz_socks5_auth.rs  fuzz_socks5_greeting.rs  fuzz_udp_header.rs
scripts/: build-multiarch-cross.sh  build-multiarch-qemu.sh  check-ci-test-sync.sh  run-e2e-in-container.sh  security-scan.sh  test-compose.sh  test-e2e-podman.sh  test-webhook-podman.sh  validate.sh
scripts/hooks/: pre-push
src/: cli.rs  context.rs  demo.rs  lib.rs  logging.rs  main.rs  motd.rs  server.rs  utils.rs  wizard.rs
src/alerting/: mod.rs
src/api/: backup.rs  bans.rs  broadcast.rs  connections.rs  dashboard.rs  groups.rs  kick.rs  maintenance.rs  mod.rs  pagination.rs  quotas.rs  reload.rs  sessions.rs  sse.rs  ssh_config.rs  users.rs  ws.rs
src/audit/: events.rs  mod.rs
src/auth/: certificate.rs  mod.rs  password.rs  pubkey.rs  user.rs
src/config/: acl.rs  env.rs  mod.rs  presets.rs  redact.rs  types.rs
src/geoip/: mod.rs
src/metrics/: collectors.rs  mod.rs
src/persistence/: config_history.rs  lockfile.rs  mod.rs  reputation.rs  state.rs  userdata.rs
src/proxy/: acl.rs  connector.rs  dns_cache.rs  forwarder.rs  ip_guard.rs  mod.rs  pool.rs  retry.rs
src/quota/: bandwidth.rs  mod.rs  rolling_window.rs
src/security/: ban.rs  ip_filter.rs  ip_reputation.rs  mod.rs  normalize.rs  rate_limit.rs
src/shell/: context.rs  executor.rs  filesystem.rs  mod.rs  parser.rs  terminal.rs
src/shell/commands/: admin.rs  alias_cmd.rs  bookmark.rs  cat.rs  cd.rs  colors.rs  exit.rs  help.rs  ls.rs  mod.rs  ping_cmd.rs  pwd.rs  resolve_cmd.rs  show.rs  test_cmd.rs  uname.rs  whoami.rs
src/socks/: auth.rs  handler.rs  mod.rs  protocol.rs  udp_relay.rs
src/ssh/: handler.rs  keys.rs  mod.rs  session.rs
src/webhooks/: mod.rs  types.rs
src/wizard/: advanced.rs  helpers.rs  mod.rs  monitoring.rs  security.rs  server.rs  users.rs
tests/: Containerfile.test-client
tests/common/: mod.rs
tests/e2e/: acl_combined_test.rs  acl_fqdn_test.rs  acl_ipv6_test.rs  acl_subnet_test.rs  api_audit_improvements_test.rs  api_dashboard_test.rs  api_groups_test.rs  api_sessions_test.rs  api_users_details_test.rs  audit_trail_test.rs  auth_test.rs  autoban_test.rs  backup_restore_test.rs  browser_dashboard_test.rs  browser_screenshots.rs  cli_e2e_test.rs  forwarding_test.rs  helpers.rs  metrics_server_test.rs  performance_test.rs  persistence_test.rs  quota_api_test.rs  rejection_test.rs  reload_test.rs  shell_commands_test.rs  shell_test.rs  socks5_server_test.rs  socks5_standalone_test.rs  socks5_timeout_test.rs  sse_payload_test.rs  sse_ticket_e2e_test.rs  ssh_session_test.rs  status_test.rs  upstream_proxy_test.rs  webhook_retry_test.rs  webhook_test.rs  wizard_test.rs  ws_test.rs
tests/unit/: acl_proptest.rs  acl_test.rs  alerting_test.rs  api_middleware_test.rs  api_test.rs  audit_dropped_test.rs  audit_events_serde_test.rs  audit_improvements_test.rs  audit_logger_test.rs  audit_rotation_test.rs  audit_test.rs  auth_service_test.rs  certificate_auth_test.rs  cli_test.rs  config_merge_edge_cases_test.rs  config_proptest.rs  config_test.rs  config_validation_test.rs  connector_test.rs  connector_unit_test.rs  context_test.rs  demo_scenarios_test.rs  dns_cache_test.rs  forwarder_test.rs  forwarder_unit_test.rs  geoip_test.rs  geoip_unit_test.rs  ip_guard_test.rs  ip_rate_limiter_test.rs  ip_reputation_test.rs  main.rs  maintenance_window_edge_cases_test.rs  metrics_cardinality_test.rs  metrics_extended_test.rs  metrics_unit_test.rs  new_features_test.rs  password_test.rs  pool_test.rs  pre_auth_check_test.rs  proxy_acl_decision_test.rs  (+31 more)
